RESOLVED FIXED111445
[BlackBerry] Authentication credentials lost when opening a new tab
https://bugs.webkit.org/show_bug.cgi?id=111445
Summary [BlackBerry] Authentication credentials lost when opening a new tab
otcheung
Reported 2013-03-05 08:56:10 PST
CredentialStorage is cleared when the chrome switches tabs
Attachments
Patch (3.64 KB, patch)
2013-03-05 09:08 PST, otcheung
no flags
otcheung
Comment 1 2013-03-05 09:08:21 PST
Rob Buis
Comment 2 2013-03-05 09:16:36 PST
Comment on attachment 191507 [details] Patch LGTM.
WebKit Review Bot
Comment 3 2013-03-05 10:07:27 PST
Comment on attachment 191507 [details] Patch Clearing flags on attachment: 191507 Committed r144772: <http://trac.webkit.org/changeset/144772>
WebKit Review Bot
Comment 4 2013-03-05 10:07:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.